methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:4: error: not found: value positionj1j2
  positionj1j2()
  ^